<resources>
    <string name="app_name">DinoCloud</string>

    <!-- LOGIN PAGE -->
    <string name="image_login">Image_login</string>
    <string name="login_image_logo">Login Image</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="minimum_password"> Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password again or sign up!</string>
    <string name="btn_login">LOGIN</string> <!-- Login button -->
    <string name="btn_signup_here">Register a new account here</string>
    <string name="btn_reset_password">Forgot your password?</string>



    <!-- REGISTER PAGE -->
    <string name="btn_sign_up">REGISTER</string>
    <string name="register_activity_logo">register_activity_logo</string>
    <string name="dinocloud_register">Dinocloud | Register</string>



    <string name="title_activity_user">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="back_to_login"><![CDATA[<< Back]]></string>
    <string name="btn_register">REGISTER</string>
    <!--
     <string name="back_to_login"><![CDATA[<< Back]]></string>
    -->



    <!-- <string name="action_permission">Grant Permission</string>
     <string name="action_updates">Check for updates</string>
     <string name="nav_logout">Logout</string>
     <string name="nav_about">About</string>
     <string name="nav_profile">My Profile</string>
     <string name="aboutText">TextView</string>
     <string name="contact">Contact</string>
     <string name="upload_button">Upload</string>
     <string name="title_my_files">Cloud files list</string>
     <string name="upload_menu_button">Upload</string>
     <string name="nav_files">My Files</string> -->

</resources>
